--- a/terraform/templates/cloudinit.yaml
+++ b/terraform/templates/cloudinit.yaml
@@ -1,6 +1,6 @@
 #cloud-config
 hostname: ${node_name}
-fqdn: ${node_name}.example.com
+fqdn: ${node_name}.reinthal.me
 manage_etc_hosts: true
 
 packages:
@@ -9,7 +9,7 @@ packages:
   - jq
 
 runcmd:
-  # Install Omni prerequisites
-  - curl -sfL https://raw.githubusercontent.com/siderolabs/omni/main/install.sh | bash -s
-  - echo "NODE_ROLE=${node_role}" > /etc/omni-node-config
-  # Additional setup commands for Omni/Talos can be added here 
+  
+  # Start Tailscale with auto-approval using auth key (if provided)
+  - curl -fsSL https://tailscale.com/install.sh | sh && sudo tailscale up --auth-key=${tailscale_authkey} --hostname=${node_name} ${tailscale_extra_args}
+  
