--- a/fluxcd/apps/base/tailscale/release.yaml
+++ b/fluxcd/apps/base/tailscale/release.yaml
@@ -1,8 +1,8 @@
 ---
-apiVersion: apps/v1
+apiVersion: v1
 kind: Namespace
 metadata:
-  name: tailscale
+  name: ballista
 ---
 apiVersion: helm.toolkit.fluxcd.io/v2beta1
 kind: HelmRelease
