feat: 2 - add devboxes

--- a/fluxcd/apps/base/devboxes/secrets-example.yaml
+++ b/fluxcd/apps/base/devboxes/secrets-example.yaml
@@ -1,8 +1,9 @@
 apiVersion: v1
 data:
-  auth_key: xxx
+  client-id: xxx
+  client-secret: xxx
 kind: Secret
 metadata:
   creationTimestamp: null
   name: tailscale-secret
-  namespace: devboxes
+  namespace: tailscale
