--- a/fluxcd/infrastructure/controllers/hetzner-csi.yaml
+++ b/fluxcd/infrastructure/controllers/hetzner-csi.yaml
@@ -7,6 +7,15 @@ spec:
   interval: 1h
   url: https://charts.hetzner.cloud
 ---
+apiVersion: v1
+kind: Namespace
+metadata:
+  name: kube-system
+  labels:
+    pod-security.kubernetes.io/enforce: privileged
+    pod-security.kubernetes.io/audit: privileged
+    pod-security.kubernetes.io/warn: privileged
+---
 apiVersion: helm.toolkit.fluxcd.io/v2beta1
 kind: HelmRelease
 metadata:
