--- a/fluxcd/infrastructure/controllers/openebs-csi.yaml
+++ b/fluxcd/infrastructure/controllers/openebs-csi.yaml
@@ -1,16 +1,16 @@
 apiVersion: source.toolkit.fluxcd.io/v1beta2
 kind: HelmRepository
 metadata:
-  name: hcloud
+  name: openebs
   namespace: flux-system
 spec:
   interval: 1h
-  url: https://charts.hetzner.cloud
+  url: https://openebs.github.io/openebs
 ---
 apiVersion: v1
 kind: Namespace
 metadata:
-  name: kube-system
+  name: openebs
   labels:
     pod-security.kubernetes.io/enforce: privileged
     pod-security.kubernetes.io/audit: privileged
@@ -19,24 +19,26 @@ metadata:
 apiVersion: helm.toolkit.fluxcd.io/v2beta1
 kind: HelmRelease
 metadata:
-  name: hcloud-csi
-  namespace: kube-system
+  name: openebs-csi
+  namespace: openebs
 spec:
   interval: 5m
   chart:
     spec:
-      chart: hcloud-csi
-      version: "2.13.0"
+      chart: openebs
+      version: "4.2.0"
       sourceRef:
         kind: HelmRepository
-        name: hcloud
+        name: openebs
         namespace: flux-system
   values:
-    controller:
-      replicas: 1
-    storageClass:
-      isDefault: true
-      fsType: ext4
-    secret:
-      existingSecret: hcloud-csi-token
+    engines:
+      local:
+        lvm:
+          enabled: false
+        zfs:
+          enabled: false
+      replicated:
+        mayastor:
+          enabled: false
 ---
