--- a/fluxcd/infrastructure/controllers/openebs.yaml
+++ b/fluxcd/infrastructure/controllers/openebs.yaml
@@ -19,7 +19,7 @@ metadata:
 apiVersion: helm.toolkit.fluxcd.io/v2beta1
 kind: HelmRelease
 metadata:
-  name: openebs-csi
+  name: openebs
   namespace: openebs
 spec:
   interval: 5m
