fix: add localpath and disable init containers

--- a/fluxcd/infrastructure/controllers/openebs.yaml
+++ b/fluxcd/infrastructure/controllers/openebs.yaml
@@ -38,7 +38,9 @@ spec:
           enabled: false
         zfs:
           enabled: false
-      replicated:
-        mayastor:
-          enabled: false
+    mayastor:
+      csi:
+        node:
+          initContainers:
+            enabled: false
 ---
