--- a/fluxcd/apps/base/github-runners/kustomization.yaml
+++ b/fluxcd/apps/base/github-runners/kustomization.yaml
@@ -1,7 +1,6 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
-namespace: devboxes
+namespace: github-runners
 resources:
-  - devboxes.yaml
+  - runners.yaml
   - namespace.yaml
-  - secrets.yaml
