--- a/fluxcd/apps/production/kustomization.yaml
+++ b/fluxcd/apps/production/kustomization.yaml
@@ -1,8 +1,4 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
-  - ../base/devboxes
-patches:
-  - path: podinfo-values.yaml
-    target:
-      kind: HelmRelease
+  - ../base/github-runners
