--- a/fluxcd/apps/base/github-runners/runners.yaml
+++ b/fluxcd/apps/base/github-runners/runners.yaml
@@ -3,3 +3,11 @@ kind: Namespace
 metadata:
   name: github-runners
 ---
+apiVersion: source.toolkit.fluxcd.io/v1beta2
+kind: HelmRepository
+metadata:
+  name: actions-runner-controller
+  namespace: github-runners
+spec:
+  interval: 24h
+  url: https://actions-runner-controller.github.io/actions-runner-controller
