--- a/fluxcd/apps/base/github-runners/runners.yaml
+++ b/fluxcd/apps/base/github-runners/runners.yaml
@@ -11,3 +11,47 @@ metadata:
 spec:
   interval: 24h
   url: https://actions-runner-controller.github.io/actions-runner-controller
+---
+apiVersion: helm.toolkit.fluxcd.io/v2beta2
+kind: HelmRelease
+metadata:
+  name: actions-runner-controller
+  namespace: github-runners
+spec:
+  interval: 24h
+  chart:
+    spec:
+      chart: actions-runner-controller
+      version: "0.23.7"
+      sourceRef:
+        kind: HelmRepository
+        name: actions-runner-controller
+        namespace: github-runners
+      interval: 24h
+  values:
+    replicaCount: 1
+    webhookPort: 9443
+    syncPeriod: 1m
+    defaultScaleDownDelay: 5m
+    enableLeaderElection: true
+
+    authSecret:
+      enabled: true
+      create: false
+      name: "controller-manager"
+
+    image:
+      repository: "summerwind/actions-runner-controller"
+      actionsRunnerRepositoryAndTag: "summerwind/actions-runner:ubuntu-20.04"
+      dindSidecarRepositoryAndTag: "docker:dind"
+      pullPolicy: IfNotPresent
+
+    serviceAccount:
+      create: true
+
+    certManagerEnabled: false
+
+    logFormat: text
+
+    githubWebhookServer:
+      enabled: false
