refactor(github-runner): fix copy paste capitalize S

--- a/fluxcd/apps/base/github-runners/runners.yaml
+++ b/fluxcd/apps/base/github-runners/runners.yaml
@@ -65,7 +65,7 @@ metadata:
   namespace: actions
 spec:
   template:
-    Spec:
+    spec:
       labels:
         - self-hosted-linux
       image: "summerwind/actions-runner:ubuntu-20.04"
