--- a/fluxcd/apps/base/github-runners/runners.yaml
+++ b/fluxcd/apps/base/github-runners/runners.yaml
@@ -2,6 +2,10 @@ apiVersion: v1
 kind: Namespace
 metadata:
   name: github-runners
+  labels:
+    pod-security.kubernetes.io/enforce: privileged
+    pod-security.kubernetes.io/warn: privileged
+    pod-security.kubernetes.io/audit: privileged
 ---
 apiVersion: source.toolkit.fluxcd.io/v1beta2
 kind: HelmRepository
