fix(github-runner): add github pat for runner deployment

--- a/fluxcd/apps/base/github-runners/runners.yaml
+++ b/fluxcd/apps/base/github-runners/runners.yaml
@@ -74,6 +74,10 @@ spec:
         - self-hosted-linux
       image: "summerwind/actions-runner:ubuntu-20.04"
       repository: "reinthal/template" 
+      githubToken:
+        secretRef:
+          name: controller-manager
+          key: github_pat
       resources:
         requests:
           cpu: 2000m
