fix(github-runner): configure with more descriptive label

--- a/fluxcd/apps/base/github-runners/runners.yaml
+++ b/fluxcd/apps/base/github-runners/runners.yaml
@@ -71,7 +71,7 @@ spec:
   template:
     spec:
       labels:
-        - self-hosted-linux
+        - k8s-runner
       image: "summerwind/actions-runner:ubuntu-20.04"
       repository: "reinthal/template" 
       githubToken:
