--- a/fluxcd/apps/base/github-runners/runners.yaml
+++ b/fluxcd/apps/base/github-runners/runners.yaml
@@ -11,13 +11,14 @@ apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
   name: github-cache-pvc
-  namespace: actions
+  namespace: github-runners
 spec:
   accessModes:
     - ReadWriteOnce
   resources:
     requests:
-      storage: 10Gi
+      storage: 15Gi 
+  storageClassName: openebs-single-replica
 ---
 apiVersion: source.toolkit.fluxcd.io/v1beta2
 kind: HelmRepository
