--- a/fluxcd/infrastructure/controllers/openebs.yaml
+++ b/fluxcd/infrastructure/controllers/openebs.yaml
@@ -44,3 +44,17 @@ spec:
           initContainers:
             enabled: false
 ---
+apiVersion: storage.k8s.io/v1
+kind: StorageClass
+metadata:
+  name: openebs-hostpath-fixed
+  annotations:
+    cas.openebs.io/config: |
+      - name: StorageType
+        value: "hostpath"
+      - name: BasePath
+        value: "/var/local/openebs"
+    openebs.io/cas-type: local
+provisioner: openebs.io/local
+reclaimPolicy: Delete
+volumeBindingMode: WaitForFirstConsumer
