fix: point to nix-container/result

--- a/.github/workflows/alpine-linux.yml
+++ b/.github/workflows/alpine-linux.yml
@@ -61,7 +61,7 @@ jobs:
 
       - name: Load image into Docker
         run: |
-          docker load < result
+          docker load < nix-container/result
 
       - name: Show loaded images
         run: docker images
