fix(arc): configure mounts for subsequent ci steps

--- a/fluxcd/apps/base/github-runners/runners.yaml
+++ b/fluxcd/apps/base/github-runners/runners.yaml
@@ -20,6 +20,32 @@ spec:
       storage: 15Gi 
   storageClassName: openebs-hostpath-fixed
 ---
+apiVersion: v1
+kind: PersistentVolumeClaim
+metadata:
+  name: nix-store-pvc
+  namespace: github-runners
+spec:
+  accessModes:
+    - ReadWriteOnce
+  resources:
+    requests:
+      storage: 20Gi  # Nix store can get large
+  storageClassName: openebs-hostpath-fixed
+---
+apiVersion: v1
+kind: PersistentVolumeClaim
+metadata:
+  name: nix-var-pvc
+  namespace: github-runners
+spec:
+  accessModes:
+    - ReadWriteOnce
+  resources:
+    requests:
+      storage: 5Gi  # Nix daemon state and profiles
+  storageClassName: openebs-hostpath-fixed
+---
 apiVersion: source.toolkit.fluxcd.io/v1beta2
 kind: HelmRepository
 metadata:
@@ -60,7 +86,6 @@ spec:
     image:
       repository: "summerwind/actions-runner-controller"
       actionsRunnerRepositoryAndTag: "ghcr.io/reinthal/kubernetes-rollout/action-runner-nix:sha-2c3b0a1"
-      dindSidecarRepositoryAndTag: "docker:dind"
       pullPolicy: IfNotPresent
 
     serviceAccount:
@@ -86,17 +111,28 @@ spec:
       labels:
         - k8s-runner
       image: "ghcr.io/reinthal/kubernetes-rollout/action-runner-nix:sha-2c3b0a1"
-      repository: "reinthal/template" 
+      repository: "reinthal/template"
+      dockerdWithinRunnerContainer: false
       resources:
         requests:
           cpu: 2000m
           memory: 2000Mi
       volumes:
-        - name: cache-volume
+        - name: nix-store
           persistentVolumeClaim:
-            claimName: github-cache-fixed-pvc
+            claimName: nix-store-pvc
+        - name: nix-var
+          persistentVolumeClaim:
+            claimName: nix-var-pvc
       containers:
         - name: runner
           volumeMounts:
-            - mountPath: /cache
-              name: cache-volume
+            - mountPath: /nix/store
+              name: nix-store
+            - mountPath: /nix/var
+              name: nix-var
+          env:
+            - name: PATH
+              value: "/home/runner/.nix-profile/bin:/nix/var/nix/profiles/default/bin:$(PATH)"
+            - name: NIX_REMOTE
+              value: "daemon"
