--- a/fluxcd/infrastructure/controllers/ingress-nginx.yaml
+++ b/fluxcd/infrastructure/controllers/ingress-nginx.yaml
@@ -34,6 +34,14 @@ spec:
   values:
     controller:
       service:
-        type: "NodePort"
+        type: "LoadBalancer"
+        annotations:
+          load-balancer.hetzner.cloud/name: "worker-load-balancer"
+          load-balancer.hetzner.cloud/use-private-ip: "true"
+        externalTrafficPolicy: "Local"
+      config:
+        use-forwarded-headers: "true"
+        compute-full-forwarded-for: "true"
+        use-proxy-protocol: "true"
     admissionWebhooks:
       enabled: false
