--- a/fluxcd/infrastructure/configs/kustomization.yaml
+++ b/fluxcd/infrastructure/configs/kustomization.yaml
@@ -2,3 +2,4 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
   - cluster-issuers.yaml
+  - palisade-reinthal-me-tls.yaml
