--- a/fluxcd/infrastructure/controllers/cert-manager.yaml
+++ b/fluxcd/infrastructure/controllers/cert-manager.yaml
@@ -33,3 +33,11 @@ spec:
       interval: 12h
   values:
     installCRDs: true
+    extraArgs:
+      - --dns01-recursive-nameservers=1.1.1.1:53,9.9.9.9:53
+      - --dns01-recursive-nameservers-only
+    podDnsPolicy: None
+    podDnsConfig:
+      nameservers:
+        - 1.1.1.1
+        - 9.9.9.9
