--- a/fluxcd/apps/base/cyberchef/ingress.yaml
+++ b/fluxcd/apps/base/cyberchef/ingress.yaml
@@ -1,20 +1,26 @@
 ---
-apiVersion: traefik.io/v1alpha1
-kind: IngressRoute
+apiVersion: networking.k8s.io/v1
+kind: Ingress
 metadata:
-  name: dagster-frontend
-  namespace: dagster
+  name: cyberchef-ingress
+  namespace: cyberchef
   annotations:
-    kubernetes.io/ingress.class: traefik-external
+    kubernetes.io/ingress.class: nginx
+    nginx.ingress.kubernetes.io/ssl-redirect: "true"
 spec:
-  entryPoints:
-    - websecure
-  routes:
-    - match: Host(`cyberchef.local.reinthal.me`)
-      kind: Rule
-      services:
-        - name: cyberchef-service
-          port: 8080
   tls:
-    secretName: local-reinthal-me-tls
+    - hosts:
+        - cyberchef.palisade.reinthal.me
+      secretName: palisade-reinthal-me-tls
+  rules:
+    - host: cyberchef.palisade.reinthal.me
+      http:
+        paths:
+          - path: /
+            pathType: Prefix
+            backend:
+              service:
+                name: cyberchef-service
+                port:
+                  number: 8080
 ---
