--- a/fluxcd/apps/base/cyberchef/ingress.yaml
+++ b/fluxcd/apps/base/cyberchef/ingress.yaml
@@ -5,9 +5,9 @@ metadata:
   name: cyberchef-ingress
   namespace: cyberchef
   annotations:
-    kubernetes.io/ingress.class: nginx
     nginx.ingress.kubernetes.io/ssl-redirect: "true"
 spec:
+  ingressClassName: nginx
   tls:
     - hosts:
         - cyberchef.palisade.reinthal.me
